--- a/index.html
+++ b/index.html
@@ -59,22 +59,6 @@
     <nav>
         <div class="navbar bg-base-100 w-10/12 mx-auto">
             <div class="navbar-start">
-              <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-5 w-5"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor">
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M4 6h16M4 12h8m-8 6h16" />
-                  </svg>
-                </div>
-              </div>
               <i class="fa-solid fa-arrow-right -rotate-45 bg-primary rounded-full p-1.5"></i>
             <a class=" text-3xl font-extrabold" href="#"> Rinterio</a>
             </div>
@@ -105,6 +89,23 @@
                 ></i>
               </a>
               </div>
+              <!-- dropdown starts -->
+        <div class="dropdown ">
+          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden ml-28">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+          <ul
+            tabindex="0"
+            class=" right-0 menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact Us</a></li>
+          </ul>
+        
+        </div>
+         <!-- dropdown end -->
           </div>
     </nav>
        
