--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               body: "rgb(248, 246, 243)",
               accent: "rgb(106, 151, 57)",
               body_neutral: "rgb(51, 51, 51)",
-              btn: "rgb(171, 239, 95)",
+              btn: "rgba(171, 239, 95, 0.5);",
             },
             fontFamily: {
               Poppins: "Poppins",
@@ -56,8 +56,8 @@
     <!-- header starts -->
     <header>
       <!-- nav starts -->
-    <nav>
-        <div class="navbar bg-base-100 w-10/12 mx-auto">
+    <nav class="w-10/12 mx-auto">
+        <div class="navbar bg-base-100 ">
             <div class="navbar-start">
               <i class="fa-solid fa-arrow-right -rotate-45 bg-primary rounded-full p-1.5"></i>
             <a class=" text-3xl font-extrabold" href="#"> Rinterio</a>
@@ -108,8 +108,27 @@
          <!-- dropdown end -->
           </div>
     </nav>
-       
 <!-- nav ends -->
+ <!-- banner starts -->
+ <section>
+    <div class=" w-10/12 mx-auto">
+     <div class="lg:w-7/12 mx-auto">
+      <img src="assets/banner.png" alt="banner">
+     </div>
+     <div class=" text-center">
+       <h1 class=" text-2xl lg:text-6xl	font-extrabold	">A barn house of this design has a  striking appearance</h1><br>
+      <p class="font-medium	text-base	">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p> <br>
+      <button> 
+        <a class="btn bg-btn rounded-3xl font-semibold text-sm"
+                >View Details
+                <i class="fa-solid fa-arrow-right -rotate-45 bg-primary rounded-full p-1.5"></i>
+              </a>
+      </button>
+    </div>
+    </div>
+  
+ </section>
+ <!-- banner ends -->
     </header>
     <!-- header ends -->
     <main></main>
