--- a/index.html
+++ b/index.html
@@ -389,6 +389,37 @@
       <!-- lets connect ends -->
   </main>
   
-    <footer></footer>
+    <footer>
+      <!-- footer starts -->
+      <footer class="footer footer-center bg-black text-primary-content p-10 ">
+        <aside>
+          <div>
+          <i
+          class="text-black fa-solid fa-arrow-right -rotate-45 bg-primary rounded-full p-1.5"
+        ></i>
+        <a class="text-3xl font-extrabold" href="#"> Rinterio</a>
+      </div>
+          <p class="font-bold">
+            The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.
+          </p>
+        </aside>
+        <div class="grid grid-cols-1 lg:grid-cols-5 gap-4 list-none	">
+            <li ><a>Home</a></li>
+            <li ><a>Services</a></li>
+            <li ><a>Portfolio</a></li>
+            <li ><a>Blogs</a></li>
+            <li ><a>Contact Us</a></li>
+        </div>
+        <button>
+          <a class="btn bg-primary rounded-3xl font-extrabold text-lg"
+              >Book Consult
+              <i
+                class="fa-solid fa-arrow-right -rotate-45 bg-black rounded-xl text-white p-1"
+              ></i>
+            </a>
+        </button>
+      </footer>
+       <!-- footer end -->
+    </footer>
   </body>
 </html>
