--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <!-- work process ends-->
    
     <!-- latest protfolio startrs -->
-    <section class=" bg-white mb-10">
+    <section class=" bg-white mb-10 pb-7">
       <div class="w-10/12 mx-auto mt-10">
       <div class="text-center">
         <button class="btn btn-wide bg-white rounded-3xl font-bold text-base">
@@ -345,8 +345,44 @@
     </div>
     </section>
     <!-- latest protfolio ends -->
+     <!-- Q&A section starts -->
+      <section class=" w-10/12 mx-auto">
+        <h6 class="font-extrabold text-xl text-center">Any Question</h6><br>
+        <div class="hero bg-base-200">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+           <img src="assets/faq.png" alt="">
+           <div>
+            <!-- ?accordian -->
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">What would you like to know about home rent?
+              </div>
+              <div class="collapse-content">
+                <p>yes</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Are you looking for tips</div>
+              <div class="collapse-content">
+                <p>yes or no</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium"> what you're looking for</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+             <!-- accordian end -->
+          </div>
+        </div>
+      </section>
+     <!-- Q&A section starts -->
      <!-- lets connect starts -->
-     <section class="">
+     <section class="pb-7">
       <div class="w-10/12 mx-auto mt-10 ">
         <div class="text-center">
           <button class="btn btn-wide bg-primary rounded-3xl font-bold text-base">
